// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetIndicator should render the WidgetIndicator and match snapshot for 0% percentage 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb kyBNWc MuiBox-root css-0"
    data-testid="WIDGET_INDICATOR_WRAPPER_BOX"
  >
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE0"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE1"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE2"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE3"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE4"
    />
  </div>
</DocumentFragment>
`;

exports[`WidgetIndicator should render the WidgetIndicator and match snapshot for 50% percentage 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb kyBNWc MuiBox-root css-0"
    data-testid="WIDGET_INDICATOR_WRAPPER_BOX"
  >
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE0"
    />
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE1"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE2"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE3"
    />
    <div
      aria-selected="false"
      class="sc-gtLWhw fXVKSa MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE4"
    />
  </div>
</DocumentFragment>
`;

exports[`WidgetIndicator should render the WidgetIndicator and match snapshot for 100% percentage 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb kyBNWc MuiBox-root css-0"
    data-testid="WIDGET_INDICATOR_WRAPPER_BOX"
  >
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE0"
    />
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE1"
    />
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE2"
    />
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE3"
    />
    <div
      aria-selected="true"
      class="sc-gtLWhw chVlSI MuiBox-root css-0"
      data-testid="WIDGET_INDICATOR_STRIPE4"
    />
  </div>
</DocumentFragment>
`;
